; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket.c_sodisconnectx.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket.c_sodisconnectx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sodisconnectx(%struct.socket* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.socket*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.socket* %0, %struct.socket** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.socket*, %struct.socket** %4, align 8
  %9 = call i32 @socket_lock(%struct.socket* %8, i32 1)
  %10 = load %struct.socket*, %struct.socket** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @sodisconnectxlocked(%struct.socket* %10, i32 %11, i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = load %struct.socket*, %struct.socket** %4, align 8
  %15 = call i32 @socket_unlock(%struct.socket* %14, i32 1)
  %16 = load i32, i32* %7, align 4
  ret i32 %16
}

declare dso_local i32 @socket_lock(%struct.socket*, i32) #1

declare dso_local i32 @sodisconnectxlocked(%struct.socket*, i32, i32) #1

declare dso_local i32 @socket_unlock(%struct.socket*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
